Pages added to Gomez-Rubio et al. (2013).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@119 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -96,7 +96,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
    title={Spatial Models Using Laplace Approximation Methods},
    booktitle={Handbook of Regional Science},
    editor={Manfred M. Fischer and Peter Nijkamp},
-   pages={},
+   pages={1401--1417},
    publisher={Springer-Verlag, New York}
 }
 
