Latest version of the paper.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/spdep2@120 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/INLABMA/inst/not_a_vignette/biblio.bib
+++ b/INLABMA/inst/not_a_vignette/biblio.bib
@@ -92,7 +92,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 
 @incollection{GomezRubioetal:2013,
    author={G\'omez-Rubio, V. and R. S. Bivand and H. Rue},
-   year={2013},
+   year={2014},
    title={Spatial Models Using Laplace Approximation Methods},
    booktitle={Handbook of Regional Science},
    editor={Manfred M. Fischer and Peter Nijkamp},
@@ -101,11 +101,12 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 }
 
 
-@article{Bivandetal:2013,
+@article{Bivandetal:2014,
    author={Roger S. Bivand and Virgilio G\'omez-Rubio and H\oavard Rue},
    title={Approximate Bayesian Inference for Spatial Econometrics Models},
-   year={2013},
-   journal ={Submitted}
+   year={2014},
+   journal ={Spatial Statistics},
+   pages={To appear}
 }
 
 @InCollection{	  isi:000284021400008,
@@ -204,7 +205,7 @@ abstract = {Summary.  We analyse decisions to reopen in the aftermath of Hurrica
 }
 
 @Article{	  isi:000288017300007,
-  author	= {Schroedle, Birgit and Held, Leonhard and Riebler, Andrea
+  author	= {Schr\"odle, Birgit and Held, Leonhard and Riebler, Andrea
 		  and Danuser, Juerg},
   title		= {{Using integrated nested Laplace approximations for the
 		  evaluation of veterinary surveillance data from
@@ -888,43 +889,12 @@ Abstract = {{For bivariate meta-analysis of diagnostic studies, likelihood appro
    Sons, Ltd.}},
 DOI = {{10.1002/sim.3858}},
 ISSN = {{0277-6715}},
-Unique-ID = {{ISI:000278428200009}},
+Unique-ID = {{ISI:000278428200009}}
 }
 
-@incollection{ ISI:000284021400008,
-Author = {Martino, Sara and Rue, Havard},
-Editor = {{Mantovan, P and Secchi, P}},
-Title = {{Case studies in Bayesian computation using INLA}},
-Booktitle = {{COMPLEX DATA MODELING AND COMPUTATIONALLY INTENSIVE STATISTICAL METHODS}},
-Series = {{Contributions to Statistics}},
-publisher={Springer-Verlag},
-Year = {{2010}},
-Pages = {{99-114}},
-Abstract = {{Latent Gaussian models are a common construct in statistical
-   applications where a latent Gaussian field, indirectly observed through
-   data, is used to model, for instance, time and space dependence or the
-   smooth effect of covariates. Many well-known statistical models, such as
-   smoothing-spline models, space time models, semiparametric regression,
-   spatial and spatio-temporal models, log-Gaussian Cox models, and
-   geostatistical models are latent Gaussian models. Integrated Nested
-   Laplace approximation (INLA) is a new approach to implement Bayesian
-   inference for such models. It provides approximations of the posterior
-   marginals of the latent variables which are both very accurate and
-   extremely fast to compute. Moreover, INLA treats latent Gaussian models
-   in a general way, thus allowing for a great deal of automation in the
-   inferential procedure. The inla programme, bundled in the R library
-   INLA, is a prototype of such black-box for inference on latent Gaussian
-   models which is both flexible and user-friendly. It is meant to,
-   hopefully, make latent Gaussian models applicable, useful and appealing
-   for a larger class of users.}},
-DOI = {{10.1007/978-88-470-1386-5\_8}},
-ISSN = {{1431-1968}},
-ISBN = {{978-88-470-1385-8}},
-Unique-ID = {{ISI:000284021400008}},
-}
 
 @incollection{ ISI:000275129600006,
-Author = {Held, Leonhard and Schroedle, Birgit and Rue, Havard},
+Author = {Held, Leonhard and Schr\"odle, Birgit and Rue, Havard},
 Editor = {{Kneib, T and Tutz, G}},
 Title = {{Posterior and Cross-validatory Predictive Checks: A Comparison of MCMC
    and INLA}},
@@ -1034,39 +1004,6 @@ Abstract = {{Spatial generalized linear mixed models are common in applied
 DOI = {{10.1016/j.csda.2010.11.011}},
 ISSN = {{0167-9473}},
 Unique-ID = {{ISI:000286716000024}},
-}
-
-@article{ ISI:000288017300007,
-Author = {Schroedle, Birgit and Held, Leonhard and Riebler, Andrea and Danuser,
-   Juerg},
-Title = {{Using integrated nested Laplace approximations for the evaluation of
-   veterinary surveillance data from Switzerland: a case-study}},
-Journal = {{JOURNAL OF THE ROYAL STATISTICAL SOCIETY SERIES C-APPLIED STATISTICS}},
-Year = {{2011}},
-Volume = {{60}},
-Number = {{2}},
-Pages = {{261-279}},
-Abstract = {{Spatiotemporal disease mapping models have been used extensively to
-   describe the pattern of surveillance data. They are usually formulated
-   in a hierarchical Bayesian framework and posterior marginals are not
-   available in closed form. Hence, the standard method for parameter
-   estimation is Markov chain Monte Carlo algorithms. A new method for
-   approximate Bayesian inference in latent Gaussian models using
-   integrated nested Laplace approximations has recently been proposed as
-   an alternative. This approach promises very precise results in short
-   computational time. The aim of the paper is to show how integrated
-   nested Laplace approximations can be used as an inferential tool for a
-   variety of spatiotemporal models for the analysis of reported cases of
-   bovine viral diarrhoea in cattle from Switzerland. Conclusions
-   concerning the problem of under-reporting in the data are drawn via a
-   multilevel modelling strategy. Furthermore, a comparison with Markov
-   chain Monte Carlo methods with regard to the accuracy of the parameter
-   estimates and the usability of both approaches in practice is conducted.
-   Approaches to model choice using integrated nested Laplace
-   approximations are also presented.}},
-DOI = {{10.1111/j.1467-9876.2010.00740.x}},
-ISSN = {{0035-9254}},
-Unique-ID = {{ISI:000288017300007}},
 }
 
 @article{ ISI:000279502800003,
@@ -1364,7 +1301,7 @@ Unique-ID = {{ISI:000291604000006}},
 }
 
 @article{ ISI:000290395700009,
-Author = {Willgert, Katriina J. E. and Schroedle, Birgit and Schwermer, Heinzpeter},
+Author = {Willgert, Katriina J. E. and Schr\"odle, Birgit and Schwermer, Heinzpeter},
 Title = {{Spatial analysis of bluetongue cases and vaccination of Swiss cattle in
    2008 and 2009}},
 Journal = {{GEOSPATIAL HEALTH}},
@@ -2232,5 +2169,133 @@ Paulo J. Ribeiro Jr & Peter J. Diggle geoR: a package for
     note = {ISSN 1609-3631},
     url = {http://cran.R-project.org/doc/Rnews},
   }
+
+
+@article{Ruiz-Cardenasetal:2012,
+   author={Ruiz-Cardenas, R. and E.T. Krainski and H. Rue},
+   year={2012},
+   title={Direct fitting of dynamic models using integrated nested Laplace approximations -- INLA},
+   journal={Computational Statistics and Data Analysis},
+   volume={56}, 
+   pages={1808-1828}
+}
+
+
+@article{SchrodleHeld:2011,
+   author={Schr\"odle, B. and L. Held},
+   year={2011},
+   title={Spatio-temporal disease mapping using INLA},
+   journal={Environmetrics},
+   volume={22},
+   pages={725--734}
+}
+
+@article{Eidsviketal:2012,
+   author={Eidsvik, J. and  A.O. Finley and S. Banerjee and H. Rue},
+   year={2012},
+   title={Approximate Bayesian inference for large spatial datasets using predictive process models},
+   journal={Computational Statistics and Data Analysis},
+   volume={56},
+   pages={1362--1380}
+}
+
+@article{SchrodleHeld:2010,
+   author={Schr\"odle, B. and Held, L.},
+   year={2010},
+   title={A primer on disease mapping and ecological regression using {INLA}},
+   journal={Computational Statistics},
+   volume={26},
+   pages={241--258}
+}
+
+@article{HossainLawson:2009,
+   author={Hossain, M. M. and Lawson, A. B.},
+   year={2009},
+   title={Approximate methods in Bayesian point process spatial models},
+   journal={Computational Statistics and Data Analysis},
+   volume={53},
+   issue={8}, 
+   pages={2831--2842}
+}
+
+@article{pace+gilley:97,
+   author = {Pace, R. Kelley and O.W. Gilley},
+   title={Using the Spatial Configuration of the Data to Improve Estimation},
+   journal={Journal of the Real Estate Finance and Economics},
+   volume={14},
+   year={1997},
+   pages={333--340}
+}
+
+@book{Wood:2006,
+   author={Wood, S.N.},
+   year={2006},
+   title={Generalized Additive Models: An Introduction with  \proglang{R}},
+   publisher={Chapman and Hall/CRC}
+}
+
+@Article{KahleWickham:2013,
+  author       = { David Kahle and Hadley Wickham },
+  title        = { ggmap : Spatial Visualization with ggplot2 },
+  journal      = { The R Journal },
+  year         = { 2013 },
+  volume       = { 5 },
+  number       = { 1 },
+  pages        = { 144--162 },
+  month        = jun,
+  url          = { http://journal.r-project.org/archive/2013-1/kahle-wickham.pdf}
+}
+
+@Book{Wickham:2009,
+    author = {Hadley Wickham},
+    title = {ggplot2: elegant graphics for data analysis},
+    publisher = {Springer New York},
+    year = {2009},
+    isbn = {978-0-387-98140-6},
+    url = {http://had.co.nz/ggplot2/book},
+  }
+
+
+@book{Bivandetal:2013,
+   author={Roger S. Bivand and Edzer Pebesma and Virgilio G\'omez-Rubio},
+   title={Applied Spatial Data Analysis with \proglang{R}},
+   year={2013},
+   publisher={Springer-Verlag, New York}
+}
+
+@article{Brezgeretal:2005,
+  author =      "Andreas Brezger and Thomas Kneib and Stefan Lang",
+  title =       "BayesX: Analyzing Bayesian Structural Additive Regression Models",
+  journal =     "Journal of Statistical Software",
+  volume =      "14",
+  number =      "11",
+  pages =       "1--22",
+  day =         "9",
+  month =       "9",
+  year =        "2005",
+  CODEN =       "JSSOBK",
+  ISSN =        "1548-7660",
+  bibdate =     "2005-09-09",
+  URL =         "http://www.jstatsoft.org/v14/i11",
+  accepted =    "2005-09-09",
+  acknowledgement = "",
+  keywords =    "",
+  submitted =   "2004-06-18",
+}
+
+@manual{BayesXsrc,
+  author={Daniel Adler and Thomas Kneib and Stefan Lang and Nikolaus Umlauf and Achim Zeileis},
+  year={2012},
+  title={BayesXsrc: R Package Distribution of the BayesX C++  Sources},
+  note={R package version 2.1-1},
+  url = {http://CRAN.R-project.org/package=BayesXsrc}
+}
+
+@manual{BayesX,
+   author={Christiane Belitz and Andreas Brezger and Thomas Kneib and Stefan Lang and  Nikolaus Umlauf},
+   year={2012},
+   title={BayesX: Software for Bayesian Inference in  Structured Additive Regression Models. Version 2.1},
+   url={http://www.BayesX.org/}
+}
 
 
